# cocl-operator

./: .gitignore  .gitmodules  Containerfile  Containerfile.attestation-key-register  Containerfile.buildroot  Containerfile.bundle  Containerfile.compute-pcrs  Containerfile.operator  Containerfile.registration-server  README.md  go.mod  go.sum  renovate.json  upstream-ref.txt
.tekton/: attestation-key-register-pull-request.yaml  attestation-key-register-push.yaml  buildroot-pull-request.yaml  buildroot-push.yaml  cocl-operator-bundle-pull-request.yaml  cocl-operator-bundle-push.yaml  cocl-operator-compute-pcrs-pull-request.yaml  cocl-operator-compute-pcrs-push.yaml  cocl-operator-f7c1a-pull-request.yaml  cocl-operator-f7c1a-push.yaml  cocl-operator-fbc-pull-request.yaml  cocl-operator-fbc-push.yaml  cocl-operator-operand-compute-pcrs-pull-request.yaml  cocl-operator-operand-compute-pcrs-push.yaml  cocl-operator-operand-register-server-pull-request.yaml  cocl-operator-operand-register-server-push.yaml  cocl-operator-operator-pull-request.yaml  cocl-operator-operator-push.yaml  cocl-operator-pull-request.yaml  cocl-operator-push.yaml  cocl-operator-register-server-pull-request.yaml  cocl-operator-register-server-push.yaml  cocl-operator-yalantest-pull-request.yaml  cocl-operator-yalantest-push.yaml  compute-pcrs-pull-request.yaml  compute-pcrs-push.yaml  confidential-cluster-operator-bundle-pull-request.yaml  confidential-cluster-operator-bundle-push.yaml  confidential-cluster-operator-fbc-pull-request.yaml  confidential-cluster-operator-fbc-push.yaml  confidential-cluster-operator-pull-request.yaml  confidential-cluster-operator-push.yaml  registration-server-pull-request.yaml  registration-server-push.yaml
bundle/: customize-bundle.sh  update-bundle.sh
compute-pcrs/: Containerfile
crds/: Cargo.toml
drift-cache/operator/: Containerfile
hack/: customize-manifests.sh  sync-source.sh
manifest-gen/: Cargo.toml
operator/: Cargo.toml
operator/src/: reference_values.rs
register-server/: Cargo.toml  Containerfile
v4.21/: Containerfile.catalog  catalog-template.json
(+4 files in other folders)
