[package]
name = "crds"
version = "0.1.0"
edition = "2024"

[dependencies]
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
kube = { version = "1.1.0", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
