[package]
name = "manifest-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
crds = { path = "../crds" }
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
kube = { version = "1.1.0", features = ["derive"] }
serde_yaml = "0.9"
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
log = "0.4.27"
env_logger = "0.11.8"
